--- a/css/style.css
+++ b/css/style.css
@@ -43,18 +43,37 @@ html {
 .Portada {
     display: block;
     margin: auto;
+
 }
 
-h2 {
-    color: brown;
+/* .container-fluid{
+padding-left: 0% ;
+padding-right: 0% ;
+
+} */
+
+.Saludo {
+
+    background-color: brown;
+  
+    
+    color: white;
+}
+
+.H2 {
     text-decoration: underline;
     font-size: 30px;
+    text-align: left;
+    
 }
 
 p {
     font-weight: bold;
     font-family: 'Open Sans', sans-serif;
     font-size: 30px;
+    text-align: left;
+    
+
 }
 
 
@@ -97,7 +116,7 @@ ul {
 }
 
 
-.GridContainer {
+/* .GridContainer {
 
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 250px);
@@ -114,16 +133,16 @@ ul {
     justify-content: center;
 
 }
+ */
 
 
 
-
-.contenedor {
+/* .contenedor {
     display: flex;
     justify-content: space-between
-}
+} */
 
-.Perros {
+/* .Perros {
 
     text-align: center
 }
@@ -153,64 +172,81 @@ ul {
     text-decoration: underline;
     font-size: 14px;
     text-align: right;
-}
+} */
 
 .Mascotas {
     display: flex;
-    margin: 10%;
+    margin: 0px;
+    padding-left: 15%;
+    padding-right: 5%;
+    background-color: brown;
 }
 
 .Dog {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: 15%;
+    padding-left: 5%;
+    margin: 15px;
 }
 
 .Cat {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: 15%;
+    padding-left: 7%;
     justify-self: stretch;
-
+    margin: 15px;
 
 }
 
-#carouselExampleCaptions {
-    width: 900px;
-    height: 900px;
-   padding-left: 25%;
+
+.Promociones {
+
+    width: 700px;
+    height: 700px;
+    display: block;
+    margin: auto;
+
+
+
+
 }
 
 .carousel-caption {
     color: black;
-}
-
-
-
-:root{
-   --facebook: #3b5999;
-   --instagram: #e4405f;
-   --twitter: #55acee;
 
 }
 
-.redes-container{
+.card {
+    width: 500px;
+    height: 500px;
+
+}
+
+
+:root {
+    --facebook: #3b5999;
+    --instagram: #e4405f;
+    --twitter: #55acee;
+
+}
+
+.redes-container {
     display: flex;
     height: 100vh;
     align-items: end;
     justify-content: end;
 }
 
-.redes-container ul li{
+.redes-container ul li {
     display: inline-block;
     margin: 0 5px;
     width: 50px;
     text-align: center;
 }
 
-.redes-container ul li a{
+.redes-container ul li a {
     display: block;
     padding: 0 10px;
     background-color: #333;
@@ -221,28 +257,29 @@ ul {
     transition: .2s;
 }
 
-.redes-container ul li a:hover a{ 
+.redes-container ul li a:hover a {
     filter: blur(2px);
 }
 
-.redes-container ul li a:hover{
+.redes-container ul li a:hover {
     transform: translateY(-3) scale(1.05);
-    box-shadow: 0 5px 5px 0px rgba(0, 0, 0,.4);
+    box-shadow: 0 5px 5px 0px rgba(0, 0, 0, .4);
     filter: none;
 }
 
-.redes-container ul li .facebook:hover{
+.redes-container ul li .facebook:hover {
     background: var(--facebook);
 }
 
-.redes-container ul li .instagram:hover{
+.redes-container ul li .instagram:hover {
     background: var(--instagram);
 }
 
-.redes-container ul li .twitter:hover{
+.redes-container ul li .twitter:hover {
     background: var(--twitter);
 }
 
+.Informacion {
+    display: flex;
 
-
-
+}
